welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:4: error: not found: value While
  While (nb1>10){
  ^lastDigit:7: error: not found: value While
  While (nb2>10){
  ^